@@ -1,3 +1,13 @@
+2008-08-21  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_v4l2fourcc_to_structure),
+	(gst_v4l2_get_caps_info):
+	Add S910 and PWC formats with a low priority.
+
+	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_format_get_rank),
+	(gst_v4l2src_probe_caps_for_format):
+	Add more debugging.
+
 2008-08-20  Tim-Philipp Müller  <tim at collabora co uk>
 
 	* ext/flac/gstflacenc.c:
